--- a/Django_Docker/accounts/templates/account/verification_sent.html
+++ b/Django_Docker/accounts/templates/account/verification_sent.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Verify Your E-mail Address | ないもの検知{% endblock %}
+{% block title %}メールアドレス認証 | ToolKeeper{% endblock %}
 
 {% block contents %}
 <div class="container">
