--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -2,25 +2,36 @@
 
 {% load static %}
 
-{% block title %}管理項目一覧 | toolkeeper{% endblock %}
+{% block title %}管理項目一覧 | ToolKeeper{% endblock %}
 
 {% block active_asset_list %}active{% endblock %}
 
-{% block head %}
-<link href="{% static 'css/shop-homepage-gh-pages.css' %}" rel="stylesheet">
-{% endblock %}
 
 {% block contents %}
 <!-- Section-->
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-3">
         <div class="d-flex justify-content-end mb-4">
-            <a class="btn btn-primary float-right" href="{% url 'toolkeeper_app:asset_create' %}">新規作成</a>
-            <a class="btn btn-primary float-right" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧</a>
+            <button class="learn-more">
+                <span class="circle" aria-hidden="true">
+                  <span class="icon arrow"></span>
+                </span>
+                <span class="button-text">
+                    <a class="nav-link" href="{% url 'toolkeeper_app:asset_create' %}">新規作成</a>
+                </span>
+            </button>
+            <button class="learn-more">
+                <span class="circle" aria-hidden="true">
+                  <span class="icon arrow"></span>
+                </span>
+                <span class="button-text">
+                    <a class="nav-link" href="{% url 'toolkeeper_app:history_list' %}">履歴一覧</a>
+                </span>
+            </button>
         </div>
         <form method="get">
             {{ group_filter_form.as_p }}
-            <button type="submit" class="btn btn-primary">絞り込み</button>
+            <button class="btn btn-3" type="submit">絞り込み</button>
         </form>
         <script>
           // フォームが「すべてのグループ」を選択中である場合、選択状態にする
@@ -29,35 +40,42 @@
             groupFilterForm.selectedIndex = 0;
           }
         </script>
+        <hr>
+
+        {% if image_list %}
+            <div><p class="d-grid lead fw-normal text-muted text-center mb-3" style="font-size: 15px;">管理項目をクリックすると詳細へ移ります</p></div>
+        {% endif %}
         <div class="row gx-6 gx-lg-5 row-cols-1 row-cols-md-3">
             {% for image in page_obj %}
                 <div class="col mb-5">
-                    <div class="card h-100">
-                        <!--badge-->
-                        <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">box</div>
-                        <!-- Product image-->
-                        {% if image.image %}
-                            <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
-                        {% endif %}
-                        <!-- Product details-->
-                        <div class="card-body">
-                            <div class="text-center">
-                                <!-- Product name-->
-                                <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
-                                <!-- Product reviews-->
-                                <div class="d-flex justify-content-center small text-warning mb-2">
-                                    <!--何か入れたければ入れる-->
+                    <div class="card">
+                        <a class="btn" href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">
+                            <!--badge-->
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">box</div>
+                            <!-- Product image-->
+                            {% if image.image %}
+                                <img class="card-img-top" src="{{ image.image.url }}" alt="..." />
+                            {% endif %}
+                            <!-- Product details-->
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <!-- Product name-->
+                                    <h5 class="fw-bolder">{{ image.asset.asset_name }}</h5>
+                                    <!-- Product reviews-->
+                                    <div class="d-flex justify-content-center small text-warning mb-2">
+                                        <!--何か入れたければ入れる-->
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </a>
                         <!-- Product actions-->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">{{ image.asset }} - {{ image.group }}</a></div>
-                        </div>
+                        <!-- <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">詳細</a></div>
+                        </div> -->
                     </div>
                 </div>
                 {% empty %}
-                <p>管理項目がありません。</p>
+                <p>管理項目がありません</p>
             {% endfor %}
         </div>
         <!--<p>{{ image_list }}</p>-->
