--- a/Django_Docker/toolkeeper_app/templates/common_history_list.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_list.html
@@ -3,7 +3,7 @@
     <!-- <img src="{{ history.image.image.url }}"/> -->
     <p>{{ history.checked_at }} - {{ history.user.username }}</p>
     {% if forloop.finish %}
-        <!-- <a href="{% url 'tracker:asset_detail' image.asset.id %}">
+        <!-- <a href="{% url 'toolkeeper_app:asset_detail' image.asset.id %}">
         </a> -->
     {% endif %}
 
