--- a/Django_Docker/toolkeeper_app/templates/inquiry.html
+++ b/Django_Docker/toolkeeper_app/templates/inquiry.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}お問い合わせ | ないもの検知{% endblock %}
+{% block title %}お問い合わせ | ToolKeeper{% endblock %}
 
 {% block active_inquiry %}active{% endblock %}
 
@@ -36,34 +36,10 @@
                         {% endfor %}
 
                         <div class="d-grid">
-                            <button class="btn btn-primary btn-lg" id="submitButton" type="submit">送信</button>
+                            <button class="btn btn-3 btn-lg" id="submitButton" type="submit">送信</button>
                         </div>
                     </form>
                 </div>
-            </div>
-        </div>
-
-        <!-- Contact cards-->
-        <div class="row gx-5 row-cols-2 row-cols-lg-4 py-5">
-            <div class="col">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-chat-dots"></i></div>
-                <div class="h5 mb-2">私たちとしゃべる</div>
-                <p class="text-muted mb-0">サポートスペシャリストの1人とライブでチャットします。</p>
-            </div>
-            <div class="col">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-people"></i></div>
-                <div class="h5">コミュニティに尋ねてください</div>
-                <p class="text-muted mb-0">コミュニティフォーラムを探索し、他のユーザーとコミュニケーションを取ります。</p>
-            </div>
-            <div class="col">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-question-circle"></i></div>
-                <div class="h5">サポートセンター</div>
-                <p class="text-muted mb-0">FAQを閲覧し、記事をサポートしてソリューションを見つけます。</p>
-            </div>
-            <div class="col">
-                <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-telephone"></i></div>
-                <div class="h5">お電話ください</div>
-                <p class="text-muted mb-0">(xxx) xxxx-xxxx の通常の営業時間中にお電話ください。</p>
             </div>
         </div>
     </div>
