--- a/Django_Docker/accounts/templates/account/password_reset.html
+++ b/Django_Docker/accounts/templates/account/password_reset.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 
-{% block title %}パスワードリセット | ないもの検知{% endblock %}
+{% block title %}パスワードリセット | ToolKeeper{% endblock %}
 
 {% block contents %}
 <div class="container">
@@ -22,7 +22,7 @@
                     {% bootstrap_form form %}
                 </div>
                 
-                <button class="btn btn-primary" type="submit">送信</button>
+                <button class="btn btn-3" type="submit">送信</button>
             </form>
         </div>
     </div>
