--- a/Django_Docker/accounts/templates/account/password_reset_done.html
+++ b/Django_Docker/accounts/templates/account/password_reset_done.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Password reset done | ないもの検知{% endblock %}
+{% block title %}パスワードリセット | ToolKeeper{% endblock %}
 
 {% block contents %}
 <div class="container">
