--- a/Django_Docker/accounts/templates/account/signup.html
+++ b/Django_Docker/accounts/templates/account/signup.html
@@ -2,7 +2,7 @@
 {% load django_bootstrap5 %}
 {% load static %}
 
-{% block title %}サインアップ | ないもの検知{% endblock %}
+{% block title %}サインアップ | ToolKeeper{% endblock %}
 
 {% block active_signup %}active{% endblock %}
 
@@ -48,7 +48,7 @@
                         {% endif %}
                         
                         <div class="d-grid mb-3">
-                            <button class="btn btn-primary btn-lg" id="submitButton" type="submit">登録</button>
+                            <button class="btn btn-3 btn-lg" id="submitButton" type="submit">登録</button>
                         </div>
                         
                     </form>
