--- a/Django_Docker/toolkeeper_app/templates/asset_create.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_create.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}管理項目作成 | toolkeeper{% endblock %}
+{% block title %}管理項目作成 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
@@ -14,7 +14,7 @@
                 {{ form.as_table }}
                 {{ object.name }}
             </table>
-            <button class="my-btn-green btn btn-primary w-100 mt-3" type="submit">作成</button>
+            <button class="btn btn-3 w-100 mt-3" type="submit">作成</button>
         </form>
     </div>
 </div>
