--- a/Django_Docker/toolkeeper_app/templates/common_history_create.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_create.html
@@ -12,10 +12,10 @@
         </div>
     </div>
             
-    <div class="row justify-content-around w-100">
-        <div class="my-btn col-12 my-2 my-xl-2">
+    <div class="my-btn row justify-content-around w-100">
+        <div class="col-12 my-2 my-xl-2">
             <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
-            <label class="my-check-red btn w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
+            <label class="btn my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
         </div>
     </div>
     {% endfor %}
