--- a/Django_Docker/toolkeeper_app/templates/create_group.html
+++ b/Django_Docker/toolkeeper_app/templates/create_group.html
@@ -1,13 +1,34 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ作成 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
-<h2>グループ作成</h2>
-<br>
-<form method="post">
-    {% csrf_token %}
-    <p>ホストユーザー：{{ user.username }}</p>
-    {{ form.as_p }}
-    <button type="submit">作成</button>
-    <button><a href="{% url 'toolkeeper_app:join_group' %}">グループへ参加する</a></button>
-</form>
+<!-- Page content-->
+<section class="py-5">
+    <div class="container px-5">
+        <!-- Contact form-->
+        <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-3">
+            <div class="text-center mb-5">
+                <h2>グループを作成する</h2>
+                <hr>
+            </div>
+            <div class="row gx-5 justify-content-center">
+                <div class="col-lg-8 col-xl-6">
+                    <form method="post">
+                        {% csrf_token %}
+                        <h5 class="mb-4">ホストユーザー：{{ user.username }}</h5>
+                        <h5 class="mb-4">{{ form.as_p }}</h5>
+                        <button class="btn btn-3" type="submit">作成</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="d-grid">
+            <button class="btn btn-lg btn-2">
+                <a class="nav-link" href="{% url 'toolkeeper_app:join_group' %}">グループへ参加</a>
+            </button>
+        </div>
+    </div>
 {% endblock %}
