--- a/Django_Docker/toolkeeper_app/templates/image_add.html
+++ b/Django_Docker/toolkeeper_app/templates/image_add.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}画像追加 | toolkeeper{% endblock %}
+{% block title %}撮影登録 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
     <div class="row justify-content-between my-4" id="checked" style="display: none;">
         <h5 class="col-10" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
-        <button class="col-2 btn btn-primary my-auto" type="button" onclick="auto_fit();">画像読込</button>
+        <button class="col-2 btn btn-3 my-auto" type="button" onclick="auto_fit();">画像読込</button>
     </div>
 
     <div id="preview" style="position: relative; width: 100%; margin: auto;">
@@ -20,7 +20,7 @@
 
     <div class="my-btn row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
-        <label class="my-check-red btn" for="check" onclick="del_box();">外枠をリセット</label>
+        <label class="btn my-check-red" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
     
     <div class="row">
@@ -31,7 +31,7 @@
                 {{ item_add_form.as_table }}
                 {{ result_add_form.as_table }}
             </table>
-            <button class="my-btn-green btn btn-primary w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
+            <button class="btn btn-3 w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
         </form>
     </div>
     
