--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}アイテム追加 | toolkeeper{% endblock %}
+{% block title %}アイテム登録 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
     <form method="POST" enctype='multipart/form-data'>
         <div class="row justify-content-around w-100 my-3" style="text-align: center;">
             <h3 class="col-12 col-md-9 mb-3 mb-md-0" style="text-align: center;">すべてのアイテムの名前を入力してください。</h3>
-            <button class="col-6 col-md-2 btn btn-primary my-auto" type="button" onclick="image.onload();">画像読込</button>
+            <button class="col-6 col-md-2 btn btn-3 my-auto" type="button" onclick="image.onload();">画像読込</button>
         </div>
 
         <hr>
@@ -38,14 +38,14 @@
                 
                 <div class="row justify-content-around w-100 ms-0" id="form_edit">
                     <button class="col-5 btn btn-primary" type="button" id="item_add">追加</button>
-                    <button class="col-5 my-btn-red btn btn-primary" type="button" id="item_del">削除</button>
+                    <button class="col-5 btn my-btn-red" type="button" id="item_del">削除</button>
                 </div>
             </div>
         </div>
 
         <hr>
 
-        <button class="my-btn-green btn btn-primary w-100 mt-3" type="submit">登録</button>
+        <button class="btn btn-2 w-100 mt-3" type="submit">登録</button>
     </form>
 </div>
 {% endblock %}
