昨日のコミット忘れ分

--- a/Django_Docker/toolkeeper_app/templates/asset_list.html
+++ b/Django_Docker/toolkeeper_app/templates/asset_list.html
@@ -11,12 +11,12 @@
 <!-- Section-->
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-3">
-        <div class="d-flex justify-content-end mb-4">
-            <button class="learn-more">
+        <div class="row d-flex justify-content-end mb-4">
+            <button class="col-auto learn-more">
                 <span class="circle" aria-hidden="true">
                   <span class="icon arrow"></span>
                 </span>
-                <span class="button-text">
+                <span class="col-auto button-text">
                     <a class="nav-link" href="{% url 'toolkeeper_app:asset_create' %}">新規作成</a>
                 </span>
             </button>
