--- a/Django_Docker/toolkeeper_app/templates/image_add.html
+++ b/Django_Docker/toolkeeper_app/templates/image_add.html
@@ -18,9 +18,9 @@
         <img id="image" src="{{ image.url }}" style="display: none;"/>
     </div>
 
-    <div class="my-btn row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
+    <div class="my-check row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
-        <label class="btn my-check-red" for="check" onclick="del_box();">外枠をリセット</label>
+        <label class="btn my-btn-common my-check-red" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
     
     <div class="row">
