--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -37,8 +37,8 @@
                 <hr>
                 
                 <div class="row justify-content-around w-100 ms-0" id="form_edit">
-                    <button class="col-5 btn btn-primary" type="button" id="item_add">追加</button>
-                    <button class="col-5 btn my-btn-red" type="button" id="item_del">削除</button>
+                    <button class="col-5 btn my-btn-common my-btn-blue" type="button" id="item_add">追加</button>
+                    <button class="col-5 btn my-btn-common my-btn-red" type="button" id="item_del">削除</button>
                 </div>
             </div>
         </div>
