--- a/Django_Docker/toolkeeper_app/templates/common_history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/common_history_add.html
@@ -2,32 +2,33 @@
     {% for item in items reversed %}
     <div class="row justify-content-around w-100 my-2">
         <div class="col-auto col-md-6" id="item_{{ forloop.counter0 }}_name" style="display:flex; align-items: center; font-size: 16px;">{{ item.item_name }}</div>
-        <div class="col-auto">
+        <div class="col-auto my-check">
             {% if forloop.first %}
                 <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set" checked>
             {% else %}
                 <input class="btn-check" type="radio" id="set_{{ forloop.counter0 }}" name="set">
             {% endif %}
-            <label class="btn btn-outline-primary" for="set_{{ forloop.counter0 }}" onclick="auto_fit(); draw_box('{{ forloop.counter0 }}');">選択</label>
+            <label class="btn my-btn-common my-check-blue" for="set_{{ forloop.counter0 }}" onclick="auto_fit(); draw_box('{{ forloop.counter0 }}');">選択</label>
         </div>
     </div>
             
     <div class="row justify-content-around w-100">
-        <div class="col-12 col-xl-5 my-xl-2">
+        <div class="my-check col-12 col-xl-5 my-xl-2">
             <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
-            <label class="btn btn-outline-primary w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
+            <label class="btn my-btn-common my-check-green w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
                 <span name="checked">チェック</span>
             </label>
         </div>
 
-        <div class="my-btn col-12 col-xl-5 my-2 my-xl-2">
+        <div class="my-check col-12 col-xl-5 my-2 my-xl-2">
             <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
-            <label class="btn my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
+            <label class="btn my-btn-common my-check-red w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
         </div>
     </div>
     {% endfor %}
 </div>
 
 <div id="all_check">
-    <button class="btn btn-primary w-100 mt-4" type="button">一括チェック</button>
+    <hr>
+    <button class="btn my-btn-common my-btn-green w-100" type="button">一括チェック</button>
 </div>
