--- a/Django_Docker/toolkeeper_app/templates/group_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/group_detail.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ詳細 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
 
 <!-- Page content-->
