--- a/Django_Docker/toolkeeper_app/templates/inquiry.html
+++ b/Django_Docker/toolkeeper_app/templates/inquiry.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}お問い合わせ | ないもの検知{% endblock %}
+{% block title %}お問い合わせ | ToolKeeper{% endblock %}
 
 {% block active_inquiry %}active{% endblock %}
 
