--- a/Django_Docker/static/css/mystyle.css
+++ b/Django_Docker/static/css/mystyle.css
@@ -8,56 +8,123 @@ footer {
     margin-top: auto;
 }
 
+/* css変数の初期化 */
+:root {
+    --my-red: rgba(230, 0, 70, 1);
+    --my-red-hover: rgba(230, 0, 70, 0.6);
+    --my-red-active: rgba(230, 0, 70, 0.4);
+
+    --my-blue: rgba(13, 110, 253, 1);
+    --my-blue-hover: rgba(13, 110, 253, 0.6);
+    --my-blue-active: rgba(13, 110, 253, 0.4);
+
+    --my-green: rgba(0, 210, 60, 1);
+    --my-green-hover: rgba(0, 210, 60, 0.6);
+    --my-green-active: rgba(0, 210, 60, 0.4);
+}
+
 .my-div-style {
     margin-top: 3rem;
     margin-bottom: -1rem;
 }
 
-.my-btn
 
-.my-btn-red {
-    color: rgb(230, 0, 70) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(230, 0, 70);
+.my-btn-common {
+    font-weight: bold;
+    transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+    box-shadow: 0px 2px 0 rgba(36, 36, 36, 0.2), 2px 4px 6px rgba(33, 37, 41, 0.6);
 }
-.my-btn-red:hover {
-    color: rgb(190, 0, 50) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(190, 0, 50);
+.my-btn-common:hover, .my-btn-common:active {
+    box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
-.my-btn-red:active {
-    color: rgb(160, 0, 40) !important;
-    background-color: rgb(255, 255, 255);
-    border-color: rgb(160, 0, 40);
-}
-.my-btn .btn-check:checked + .my-btn-red {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(230, 0, 70);
-    border-color: rgb(230, 0, 70);
-}
-.my-btn .btn-check:checked + .my-btn-red:hover {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(190, 0, 50);
-    border-color: rgb(190, 0, 50);
-}
-.my-btn .btn-check:checked + .my-btn-red:active {
-    color: rgb(255, 255, 255) !important;
-    background-color: rgb(160, 0, 40);
-    border-color: rgb(160, 0, 40);
+.my-check .btn-check:disabled + .my-btn-common, .my-btn-common:disabled {
+    transition: all 0.25s cubic-bezier(0.65, 0, 0.076, 1);;
+    box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
 }
 
-.my-btn-green {
-    background-color: rgb(0, 220, 60) !important;
-    border-color: rgb(0, 220, 60) !important;
+
+.my-check-red, .my-btn-red:disabled {
+    color: var(--my-red) !important;
+    background-color: rgba(255, 255, 255, 1) !important;
+    border-color: var(--my-red) !important;
 }
-.my-btn-green:hover {
-    background-color: rgb(0, 190, 55) !important;
-    border-color: rgb(0, 190, 55) !important;
+.my-check-red:hover {
+    color: var(--my-red-hover);
+    border-color: var(--my-red-hover);
 }
-.my-btn-green:active {
-    background-color: rgb(0, 150, 50) !important;
-    border-color: rgb(0, 150, 50) !important;
+.my-check-red:active {
+    color: var(--my-red-active);
+    border-color: var(--my-red-active);
 }
+.my-btn-red, .my-check .btn-check:checked + .my-check-red {
+    color: rgba(255, 255, 255, 1) !important;
+    background-color: var(--my-red) !important;
+    border-color: var(--bs-btn-border-color) !important;
+}
+.my-btn-red:hover, .my-check .btn-check:checked + .my-check-red:hover {
+    background-color: var(--my-red-hover) !important;
+}
+.my-btn-red:active, .my-check .btn-check:checked + .my-check-red:active {
+    background-color: var(--my-red-active) !important;
+}
+
+
+.my-check-blue, .my-btn-blue:disabled {
+    color: var(--my-blue) !important;
+    background-color: rgba(255, 255, 255, 1) !important;
+    border-color: var(--my-blue) !important;
+}
+.my-check-blue:hover {
+    color: var(--my-blue-hover);
+    border-color: var(--my-blue-hover);
+}
+.my-check-blue:active {
+    color: var(--my-blue-active);
+    border-color: var(--my-blue-active);
+}
+.my-btn-blue, .my-check .btn-check:checked + .my-check-blue {
+    color: rgba(255, 255, 255, 1) !important;
+    background-color: var(--my-blue) !important;
+    border-color: var(--bs-btn-border-color) !important;
+}
+.my-btn-blue:hover, .my-check .btn-check:checked + .my-check-blue:hover {
+    background-color: var(--my-blue-hover) !important;
+}
+.my-btn-blue:active, .my-check .btn-check:checked + .my-check-blue:active {
+    background-color: var(--my-blue-active) !important;
+}
+
+
+.my-check-green, .my-btn-green:disabled {
+    color: var(--my-green) !important;
+    background-color: rgba(255, 255, 255, 1) !important;
+    border-color: var(--my-green) !important;
+}
+.my-check-green:hover {
+    color: var(--my-green-hover);
+    border-color: var(--my-green-hover);
+}
+.my-check-green:active {
+    color: var(--my-green-active);
+    border-color: var(--my-green-active);
+}
+.my-btn-green, .my-check .btn-check:checked + .my-check-green {
+    color: rgba(255, 255, 255, 1) !important;
+    background-color: var(--my-green) !important;
+    border-color: var(--bs-btn-border-color) !important;
+}
+.my-btn-green:hover, .my-check .btn-check:checked + .my-check-green:hover {
+    background-color: var(--my-green-hover) !important;
+}
+.my-btn-green:active, .my-check .btn-check:checked + .my-check-green:active {
+    background-color: var(--my-green-active) !important;
+}
+
+
+
+
+
+
 
 /* ホバーに合わせて伸びるボタン */
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
@@ -156,6 +223,16 @@ button:hover .button-text {
 .scrollable-detail {
     max-height: 200px;
     overflow-y: auto;
+}
+
+.scroll {
+  max-height: 250px;
+  overflow-y: auto;
+}
+
+.scrollasset {
+  max-height: 350px;
+  overflow-y: auto;
 }
 
 
