--- a/Django_Docker/toolkeeper_app/templates/create_group.html
+++ b/Django_Docker/toolkeeper_app/templates/create_group.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ作成 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
 <!-- Page content-->
 <section class="py-5">
@@ -7,7 +11,7 @@
         <!-- Contact form-->
         <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-3">
             <div class="text-center mb-5">
-                <h2>グループ作成</h2>
+                <h2>グループを作成する</h2>
                 <hr>
             </div>
             <div class="row gx-5 justify-content-center">
