--- a/Django_Docker/toolkeeper_app/templates/group_list.html
+++ b/Django_Docker/toolkeeper_app/templates/group_list.html
@@ -31,7 +31,7 @@
         </div>
         <div class="d-grid">
             <button class="btn btn-lg btn-2">
-                <a class="nav-link" href="{% url 'toolkeeper_app:create_group' %}">グループ登録</a>
+                <a class="nav-link" href="{% url 'toolkeeper_app:join_group' %}">グループ登録</a>
             </button>
         </div>
         <br>
