--- a/Django_Docker/toolkeeper_app/templates/history_add.html
+++ b/Django_Docker/toolkeeper_app/templates/history_add.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}アイテムチェック | toolkeeper{% endblock %}
+{% block title %}アイテム確認 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
 
     <div style="display: flex; width: 100%; justify-content: center;">
         <div class="row justify-content-between align-items-center mb-3 mx-0" style="width: 80%;">
-            <h5 class="col col-lg-auto align-self-start" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
-            <button class="col-auto col-lg-2 align-self-end btn btn-primary my-auto" type="button" onclick="auto_fit(); draw_box()">画像読込</button>
+            <h5 class="col col-lg-auto align-self-start" style="text-align: center; margin-top: 0.5rem;">すべてのアイテムを囲ってください。</h5>
+            <button class="col-auto col-lg-2 align-self-end btn btn-3 my-auto" type="button" onclick="auto_fit(); draw_box()">画像読込</button>
         </div>
     </div>
     
@@ -62,7 +62,7 @@
     
     <form method="POST" enctype='multipart/form-data'>
         {% csrf_token %}
-        <button class="my-btn-green btn btn-primary w-100" type="submit" id="submit" disabled>終了する</button>
+        <button class="btn btn-2 w-100" type="submit" id="submit" disabled>終了する</button>
         <table class="table">
             {{ result_add_form.as_table }}
         </table>
