--- a/Django_Docker/toolkeeper_app/templates/image_add.html
+++ b/Django_Docker/toolkeeper_app/templates/image_add.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}画像追加 | toolkeeper{% endblock %}
+{% block title %}撮影登録 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
@@ -18,9 +18,9 @@
         <img id="image" src="{{ image.url }}" style="display: none;"/>
     </div>
 
-    <div class="my-btn row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
+    <div class="my-check row w-50 mt-4 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
-        <label class="my-check-red btn" for="check" onclick="del_box();">外枠をリセット</label>
+        <label class="btn my-btn-common my-check-red" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
     
     <div class="row">
@@ -31,7 +31,7 @@
                 {{ item_add_form.as_table }}
                 {{ result_add_form.as_table }}
             </table>
-            <button class="btn btn-2 w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
+            <button class="btn btn-3 w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
         </form>
     </div>
     
