--- a/Django_Docker/toolkeeper_app/templates/item_add.html
+++ b/Django_Docker/toolkeeper_app/templates/item_add.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}アイテム追加 | toolkeeper{% endblock %}
+{% block title %}アイテム登録 | ToolKeeper{% endblock %}
 
-{% block active_diary_list %}active{% endblock %}
+{% block active_asset_list %}active{% endblock %}
 
 {% block contents %}
 <div class="container my-5">
@@ -37,8 +37,8 @@
                 <hr>
                 
                 <div class="row justify-content-around w-100 ms-0" id="form_edit">
-                    <button class="col-5 btn btn-3" type="button" id="item_add">追加</button>
-                    <button class="col-5 my-btn-red btn btn-3" type="button" id="item_del">削除</button>
+                    <button class="col-5 btn my-btn-common my-btn-blue" type="button" id="item_add">追加</button>
+                    <button class="col-5 btn my-btn-common my-btn-red" type="button" id="item_del">削除</button>
                 </div>
             </div>
         </div>
