--- a/Django_Docker/toolkeeper_app/templates/join_group.html
+++ b/Django_Docker/toolkeeper_app/templates/join_group.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}グループ参加 | ToolKeeper{% endblock %}
+
+{% block active_group_list %}active{% endblock %}
+
 {% block contents %}
 <!-- Page content-->
 <section class="py-5">
