--- a/Django_Docker/toolkeeper_app/templates/base.html
+++ b/Django_Docker/toolkeeper_app/templates/base.html
@@ -36,7 +36,7 @@
                             {% if user.is_authenticated %}
                                 <li class="nav-item"><a class="nav-link {% block active_asset_list %}{% endblock %}" href="{% url 'toolkeeper_app:asset_list' %}">管理項目一覧</a></li>
                                 <li class="nav-item ms-lg-3"><a class="nav-link {% block active_group_list %}{% endblock %}" href="{% url 'toolkeeper_app:group_list' %}">グループ一覧</a></li>
-                                <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'account_logout' %}">ログアウト</a></li>
+                                <li class="nav-item ms-lg-3"><a class="nav-link" href="{% url 'confirm_logout' %}">ログアウト</a></li>
                             {% else %}
                                 <li class="nav-item ms-lg-3"><a class="nav-link {% block active_signup %}{% endblock %}" href="{% url 'account_signup' %}">サインアップ</a></li>
                                 <li class="nav-item"><a class="nav-link {% block active_login %}{% endblock %}" href="{% url 'account_login' %}">ログイン</a></li>
